--- a/package.json
+++ b/package.json
@@ -40,8 +40,11 @@
     "zone.js": "^0.6.25"
   },
   "devDependencies": {
+    "angular2-template-loader": "^0.5.0",
+    "awesome-typescript-loader": "^2.2.4",
     "concurrently": "^3.0.0",
     "npm-run-all": "^3.1.0",
+    "raw-loader": "^0.5.1",
     "ts-loader": "^0.9.1",
     "typescript": "^2.0.3",
     "typings": "^1.4.0",
