--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,8 @@
     "experimentalDecorators": true,
     "removeComments": false,
     "noImplicitAny": false
+  },
+  "awesomeTypescriptLoaderOptions": {
+    "useWebpackText": true
   }
 }
